--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-yfinance
-pandas
-numpy
-matplotlib
-tensorflow
-scikit-learn
-pycoingecko
+streamlit==1.35.0
+yfinance==0.2.40
+pandas==2.2.2
+numpy==1.24.4
+matplotlib==3.7.5
+scikit-learn==1.4.1.post1
+tensorflow==2.14.0
+pycoingecko==3.1.0
